tests/testFiles/semanticErrors/splatparaminmiddle.meme
you: a(z..., b)
me, an intellectual: {
}
